# patent-llms

./: .gitignore  README.md  pyproject.toml
misc/preprocessing/: claims-corpus.ipynb  extracting-claims-from-epo-xml.ipynb  upload-corpus-to-hf.ipynb
misc/tokenizer/: training-tokenizer.ipynb
patBERTa/: 0-scraping-epo-pub-server-plus-processing-claims.ipynb  0-scraping-epo-pub-server-plus-processing.ipynb  1-corpus.ipynb  2-tokenizer.ipynb  3-mlm-pretraining-kaggle.ipynb  3-mlm-training-512.ipynb  3-mlm-training.ipynb  4-cpc-dataset.ipynb  5-cpc-analysis.ipynb  6-cpc-eval.ipynb  7-baseline-TF-IDF.ipynb  7-baseline-distillbert.ipynb  9-curr-mlm-pretraining-sl128-v8000.ipynb  9-curr-mlm-pretraining-sl256-v8000.ipynb  report-and-plan.md
preprocessing/: cpc-rdf-extraction.ipynb
scraping/: scraping-epo-pub-server.ipynb
tokenizer/: comparing-tokenizers.ipynb
